--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="callbacks.js"></script>
-    <script src="promisses.js"></script>
+    <!-- <script src="callbacks.js"></script> -->
+    <!-- <script src="promisses.js"></script> -->
+    <script src="async.js"></script>
 </body>
 </html>
